[Add][Update] 레이아웃 테두리 설정을 위한 xml파일 추가, 랭킹 페이지 기능 구현 완료(레이아웃만 깔끔하게 다듬으면 끝)

--- a/MediaFIT-master/Exercise_Helper/app/src/main/res/values/strings.xml
+++ b/MediaFIT-master/Exercise_Helper/app/src/main/res/values/strings.xml
@@ -188,4 +188,6 @@
     <string name="roboto_medium">sans-serif-medium</string>
 
     <string name="number_picker_formatter">%02d</string>
+    <string name="nodata">nodata</string>
+    <string name="noscore">noscore</string>
 </resources>
